--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Akshay Srivastava - About me</title>
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
+    </head>
+    <body>
+        <header>
+            <div class="side-nav list-styling clean-text list-styling" id="profile">
+                <ul>
+                    <li><p id="name-heading">Akshay&nbsp<strong>Srivastava</strong></p></li>
+                    <li><img src="media/profiepicture.JPG" id="profile-image"></li>
+                </ul>
+
+                <ul>
+                    <li><a href="#">About&nbspMe</a></li>
+                    <li><a href="#">Ventures</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Resume</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="social-links">
+                <ul>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/akshaysri0311"><img src="media/linkedin.png" width="25px" height="23px"></a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/akshay.0311"><img src="media/instagram.png" width="25px" height="25px"></a></li>
+                    <li><a target="_blank" href="https://github.com/Akshaysri0311"><img src="media/github.png" width="25px" height="25px"></a></li>
+
+                </ul>
+            </div>
+        </header>
+
+        <div class="content">
+            <h1>Hey there!</h1>
+            <p>It is gratifying to create. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+
+    </body>
+</html>
